--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,7 +42,7 @@ html{
 }
 .newarrival{
   position: relative;
-  top: 9rem;  
+  top: 9rem;
   width: 25rem;
   background-color: black;
   font-weight: bold;
@@ -71,6 +71,9 @@ html{
   display: flex;
   justify-content: space-between;
   padding: 0.75rem 0;
+}
+.tabletmenu{
+  display:none;
 }
 
 .gallery{
@@ -126,4 +129,27 @@ html{
   display: flex;
   height: inherit;
   align-items: center;
+}
+
+@media only screen and (max-width: 1024px){
+  .subsection{
+    width: 1024px;
+    margin: 0 auto;
+  }
+  .subsection3{
+    justify-content: center;
+  }
+  .subsection3 p{
+    display: none;
+  }
+  .subsection3 p.tabletmenu{
+    display: block;
+  }
+  .product{
+    width: 47%;
+  }
+  .glasses{
+    display: none;
+  }
+
 }
